--- a/source/styles/components/devices-section.css
+++ b/source/styles/components/devices-section.css
@@ -26,7 +26,7 @@
   .DevicesSection--column {
     flex-direction: column;
     padding-top: 6em;
-    padding-bottom: 24em;
+    padding-bottom: 20em;
     overflow: hidden;
   }
 
